// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.labels.mtls.cert -a new,new2,new3 -m classic": should create mapping for the global default-keystore secret store 1`] = `""`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.labels.mtls.cert -a new,new2,new3 -m classic": should create mapping for the global default-keystore secret store 2`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
- Creating the mapping am.uma.resource.labels.mtls.cert in the secret store default-keystore...
✔ Created the mapping am.uma.resource.labels.mtls.cert in the secret store default-keystore.
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.sets.mtls.cert -a new,new2,new,new3 --type classic": should fail due to duplicate aliases 1`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
- Creating the mapping am.uma.resource.sets.mtls.cert in the secret store default-keystore...
✖ Error: Error creating mapping 'am.uma.resource.sets.mtls.cert' for the / realm secret store 'default-keystore'
Error creating mapping 'am.uma.resource.sets.mtls.cert' for the / realm secret store 'default-keystore'
  HTTP client error
    URL: http://openam-frodo-dev.classic.com:8080/am/json/global-config/secrets/stores/KeyStoreSecretStore/default-keystore/mappings?_action=create
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: Data validation failed for the attribute, Aliases
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.sets.mtls.cert -a new,new2,new,new3 --type classic": should fail due to duplicate aliases 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --secretstore-id ESV --secret-id am.services.uma.pct.encryption --aliases esv-test-server-cert,esv-test-server-cert-2": should fail since only one alias is allowed for the mapping 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
- Creating the mapping am.services.uma.pct.encryption in the secret store ESV...
✖ Error: Error creating mapping 'am.services.uma.pct.encryption' for the alpha realm secret store 'ESV'
Error creating mapping 'am.services.uma.pct.encryption' for the alpha realm secret store 'ESV'
  HTTP client error
    URL: https://openam-frodo-dev.forgeblocks.com/am/json/realms/root/realms/alpha/realm-config/secrets/stores/GoogleSecretManagerSecretStoreProvider/ESV/mappings?_action=create
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: Invalid config: Only a single alias per mapping is allowed for this secret store type
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --secretstore-id ESV --secret-id am.services.uma.pct.encryption --aliases esv-test-server-cert,esv-test-server-cert-2": should fail since only one alias is allowed for the mapping 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore -s am.services.uma.pct.encryption -a new -m classic": should fail since no mappings can exist for the EnvironmentAndSystemPropertySecretStore 1`] = `
"'EnvironmentAndSystemPropertySecretStore' does not have mappings.
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore -s am.services.uma.pct.encryption -a new -m classic": should fail since no mappings can exist for the EnvironmentAndSystemPropertySecretStore 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi default-keystore -s unknown.label -a new -m classic": should fail due to unknown label for the secret id 1`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
- Creating the mapping unknown.label in the secret store default-keystore...
✖ Error: Error creating mapping 'unknown.label' for the / realm secret store 'default-keystore'
Error creating mapping 'unknown.label' for the / realm secret store 'default-keystore'
  HTTP client error
    URL: http://openam-frodo-dev.classic.com:8080/am/json/global-config/secrets/stores/KeyStoreSecretStore/default-keystore/mappings?_action=create
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: Data validation failed for the attribute, Secret Label
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi default-keystore -s unknown.label -a new -m classic": should fail due to unknown label for the secret id 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should create mapping for the ESV secret store 1`] = `""`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should create mapping for the ESV secret store 2`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
- Creating the mapping am.services.httpclient.mtls.servertrustcerts.testServerCert.secret in the secret store ESV...
✔ Created the mapping am.services.httpclient.mtls.servertrustcerts.testServerCert.secret in the secret store ESV.
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -t GoogleSecretManagerSecretStoreProvider -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should fail since mapping already exists 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
- Creating the mapping am.services.httpclient.mtls.servertrustcerts.testServerCert.secret in the secret store ESV...
✖ Error: Error creating mapping 'am.services.httpclient.mtls.servertrustcerts.testServerCert.secret' for the alpha realm secret store 'ESV'
Error creating mapping 'am.services.httpclient.mtls.servertrustcerts.testServerCert.secret' for the alpha realm secret store 'ESV'
  HTTP client error
    URL: https://openam-frodo-dev.forgeblocks.com/am/json/realms/root/realms/alpha/realm-config/secrets/stores/GoogleSecretManagerSecretStoreProvider/ESV/mappings?_action=create
    Status: 409
    Code: ERR_BAD_REQUEST
    Reason: Conflict
    Message: Unable to save config: Service already exists
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -t GoogleSecretManagerSecretStoreProvider -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should fail since mapping already exists 2`] = `1`;
